[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/themes/main.theme" type="Theme" id=1]
[ext_resource path="res://scripts/team_name_input.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.964706, 0.921569, 0.843137, 0 )
border_width_bottom = 3
border_color = Color( 0.282353, 0.301961, 0.25098, 1 )
corner_detail = 1
anti_aliasing = false

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.369
anchor_top = 0.062
anchor_right = 0.631
anchor_bottom = 0.118
margin_left = 0.180023
margin_top = 0.399998
margin_right = -0.180054
margin_bottom = -0.399986
text = "Enter team name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel"]
anchor_left = 0.369
anchor_top = 0.125
anchor_right = 0.631
anchor_bottom = 0.18
margin_left = 0.180023
margin_right = -0.180054
margin_bottom = -1.52588e-05
text = "_"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel"]
anchor_left = 0.335
anchor_top = 0.225
anchor_right = 0.665
anchor_bottom = 0.937
margin_left = 0.199982
margin_top = -1.52588e-05
margin_right = -0.200012
margin_bottom = 0.399902
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Button" parent="Panel/GridContainer"]
margin_right = 120.0
margin_bottom = 48.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../C")
focus_neighbour_top = NodePath("../Space")
focus_neighbour_right = NodePath("../B")
focus_neighbour_bottom = NodePath("../D")
text = "A"

[node name="B" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_right = 260.0
margin_bottom = 48.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../A")
focus_neighbour_top = NodePath("../Delete")
focus_neighbour_right = NodePath("../C")
focus_neighbour_bottom = NodePath("../E")
text = "B"

[node name="C" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_right = 400.0
margin_bottom = 48.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../B")
focus_neighbour_top = NodePath("../Submit")
focus_neighbour_right = NodePath("../A")
focus_neighbour_bottom = NodePath("../F")
text = "C"

[node name="D" type="Button" parent="Panel/GridContainer"]
margin_top = 58.0
margin_right = 120.0
margin_bottom = 106.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../F")
focus_neighbour_top = NodePath("../A")
focus_neighbour_right = NodePath("../E")
focus_neighbour_bottom = NodePath("../G")
text = "D"

[node name="E" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 58.0
margin_right = 260.0
margin_bottom = 106.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../D")
focus_neighbour_top = NodePath("../B")
focus_neighbour_right = NodePath("../F")
focus_neighbour_bottom = NodePath("../H")
text = "E"

[node name="F" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 58.0
margin_right = 400.0
margin_bottom = 106.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../E")
focus_neighbour_top = NodePath("../C")
focus_neighbour_right = NodePath("../D")
focus_neighbour_bottom = NodePath("../I")
text = "F"

[node name="G" type="Button" parent="Panel/GridContainer"]
margin_top = 116.0
margin_right = 120.0
margin_bottom = 164.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../I")
focus_neighbour_top = NodePath("../D")
focus_neighbour_right = NodePath("../H")
focus_neighbour_bottom = NodePath("../J")
text = "G"

[node name="H" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 116.0
margin_right = 260.0
margin_bottom = 164.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../G")
focus_neighbour_top = NodePath("../E")
focus_neighbour_right = NodePath("../I")
focus_neighbour_bottom = NodePath("../K")
text = "H"

[node name="I" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 116.0
margin_right = 400.0
margin_bottom = 164.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../H")
focus_neighbour_top = NodePath("../F")
focus_neighbour_right = NodePath("../G")
focus_neighbour_bottom = NodePath("../L")
text = "I"

[node name="J" type="Button" parent="Panel/GridContainer"]
margin_top = 174.0
margin_right = 120.0
margin_bottom = 222.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../L")
focus_neighbour_top = NodePath("../G")
focus_neighbour_right = NodePath("../K")
focus_neighbour_bottom = NodePath("../M")
text = "J"

[node name="K" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 174.0
margin_right = 260.0
margin_bottom = 222.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../J")
focus_neighbour_top = NodePath("../H")
focus_neighbour_right = NodePath("../L")
focus_neighbour_bottom = NodePath("../N")
text = "K"

[node name="L" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 174.0
margin_right = 400.0
margin_bottom = 222.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../K")
focus_neighbour_top = NodePath("../I")
focus_neighbour_right = NodePath("../J")
focus_neighbour_bottom = NodePath("../O")
text = "L"

[node name="M" type="Button" parent="Panel/GridContainer"]
margin_top = 232.0
margin_right = 120.0
margin_bottom = 280.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../O")
focus_neighbour_top = NodePath("../J")
focus_neighbour_right = NodePath("../N")
focus_neighbour_bottom = NodePath("../P")
text = "M"

[node name="N" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 232.0
margin_right = 260.0
margin_bottom = 280.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../M")
focus_neighbour_top = NodePath("../K")
focus_neighbour_right = NodePath("../O")
focus_neighbour_bottom = NodePath("../Q")
text = "N"

[node name="O" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 232.0
margin_right = 400.0
margin_bottom = 280.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../N")
focus_neighbour_top = NodePath("../L")
focus_neighbour_right = NodePath("../M")
focus_neighbour_bottom = NodePath("../R")
text = "O"

[node name="P" type="Button" parent="Panel/GridContainer"]
margin_top = 290.0
margin_right = 120.0
margin_bottom = 338.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../R")
focus_neighbour_top = NodePath("../M")
focus_neighbour_right = NodePath("../Q")
focus_neighbour_bottom = NodePath("../S")
text = "P"

[node name="Q" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 290.0
margin_right = 260.0
margin_bottom = 338.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../P")
focus_neighbour_top = NodePath("../N")
focus_neighbour_right = NodePath("../R")
focus_neighbour_bottom = NodePath("../T")
text = "Q"

[node name="R" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 290.0
margin_right = 400.0
margin_bottom = 338.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../Q")
focus_neighbour_top = NodePath("../O")
focus_neighbour_right = NodePath("../P")
focus_neighbour_bottom = NodePath("../U")
text = "R"

[node name="S" type="Button" parent="Panel/GridContainer"]
margin_top = 348.0
margin_right = 120.0
margin_bottom = 396.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../U")
focus_neighbour_top = NodePath("../P")
focus_neighbour_right = NodePath("../T")
focus_neighbour_bottom = NodePath("../V")
text = "S"

[node name="T" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 348.0
margin_right = 260.0
margin_bottom = 396.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../S")
focus_neighbour_top = NodePath("../Q")
focus_neighbour_right = NodePath("../U")
focus_neighbour_bottom = NodePath("../W")
text = "T"

[node name="U" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 348.0
margin_right = 400.0
margin_bottom = 396.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../T")
focus_neighbour_top = NodePath("../R")
focus_neighbour_right = NodePath("../S")
focus_neighbour_bottom = NodePath("../X")
text = "U"

[node name="V" type="Button" parent="Panel/GridContainer"]
margin_top = 406.0
margin_right = 120.0
margin_bottom = 454.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../X")
focus_neighbour_top = NodePath("../S")
focus_neighbour_right = NodePath("../W")
focus_neighbour_bottom = NodePath("../Y")
text = "V"

[node name="W" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 406.0
margin_right = 260.0
margin_bottom = 454.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../V")
focus_neighbour_top = NodePath("../T")
focus_neighbour_right = NodePath("../X")
focus_neighbour_bottom = NodePath("../Z")
text = "W"

[node name="X" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 406.0
margin_right = 400.0
margin_bottom = 454.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../W")
focus_neighbour_top = NodePath("../U")
focus_neighbour_right = NodePath("../V")
focus_neighbour_bottom = NodePath("../Submit")
text = "X"

[node name="Y" type="Button" parent="Panel/GridContainer"]
margin_top = 464.0
margin_right = 120.0
margin_bottom = 512.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../Z")
focus_neighbour_top = NodePath("../V")
focus_neighbour_right = NodePath("../Z")
focus_neighbour_bottom = NodePath("../Space")
text = "Y"

[node name="Z" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 464.0
margin_right = 260.0
margin_bottom = 512.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../Y")
focus_neighbour_top = NodePath("../W")
focus_neighbour_right = NodePath("../Y")
focus_neighbour_bottom = NodePath("../Delete")
text = "Z"

[node name="Empty" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 464.0
margin_right = 400.0
margin_bottom = 512.0
rect_min_size = Vector2( 120, 0 )

[node name="Space" type="Button" parent="Panel/GridContainer"]
margin_top = 522.0
margin_right = 120.0
margin_bottom = 570.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../Submit")
focus_neighbour_top = NodePath("../Y")
focus_neighbour_right = NodePath("../Delete")
focus_neighbour_bottom = NodePath("../A")
text = "Space"

[node name="Delete" type="Button" parent="Panel/GridContainer"]
margin_left = 140.0
margin_top = 522.0
margin_right = 260.0
margin_bottom = 570.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../Space")
focus_neighbour_top = NodePath("../Z")
focus_neighbour_right = NodePath("../Submit")
focus_neighbour_bottom = NodePath("../B")
text = "Delete"

[node name="Submit" type="Button" parent="Panel/GridContainer"]
margin_left = 280.0
margin_top = 522.0
margin_right = 400.0
margin_bottom = 570.0
rect_min_size = Vector2( 120, 0 )
focus_neighbour_left = NodePath("../Delete")
focus_neighbour_top = NodePath("../X")
focus_neighbour_right = NodePath("../Space")
focus_neighbour_bottom = NodePath("../C")
custom_styles/normal = SubResource( 1 )
text = "Submit"
[connection signal="pressed" from="Panel/GridContainer/A" to="." method="on_a_pressed"]
[connection signal="pressed" from="Panel/GridContainer/B" to="." method="on_b_pressed"]
[connection signal="pressed" from="Panel/GridContainer/C" to="." method="on_c_pressed"]
[connection signal="pressed" from="Panel/GridContainer/D" to="." method="on_d_pressed"]
[connection signal="pressed" from="Panel/GridContainer/E" to="." method="on_e_pressed"]
[connection signal="pressed" from="Panel/GridContainer/F" to="." method="on_f_pressed"]
[connection signal="pressed" from="Panel/GridContainer/G" to="." method="on_g_pressed"]
[connection signal="pressed" from="Panel/GridContainer/H" to="." method="on_h_pressed"]
[connection signal="pressed" from="Panel/GridContainer/I" to="." method="on_i_pressed"]
[connection signal="pressed" from="Panel/GridContainer/J" to="." method="on_j_pressed"]
[connection signal="pressed" from="Panel/GridContainer/K" to="." method="on_k_pressed"]
[connection signal="pressed" from="Panel/GridContainer/L" to="." method="on_l_pressed"]
[connection signal="pressed" from="Panel/GridContainer/M" to="." method="on_m_pressed"]
[connection signal="pressed" from="Panel/GridContainer/N" to="." method="on_n_pressed"]
[connection signal="pressed" from="Panel/GridContainer/O" to="." method="on_o_pressed"]
[connection signal="pressed" from="Panel/GridContainer/P" to="." method="on_p_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Q" to="." method="on_q_pressed"]
[connection signal="pressed" from="Panel/GridContainer/R" to="." method="on_r_pressed"]
[connection signal="pressed" from="Panel/GridContainer/S" to="." method="on_s_pressed"]
[connection signal="pressed" from="Panel/GridContainer/T" to="." method="on_t_pressed"]
[connection signal="pressed" from="Panel/GridContainer/U" to="." method="on_u_pressed"]
[connection signal="pressed" from="Panel/GridContainer/V" to="." method="on_v_pressed"]
[connection signal="pressed" from="Panel/GridContainer/W" to="." method="on_w_pressed"]
[connection signal="pressed" from="Panel/GridContainer/X" to="." method="on_x_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Y" to="." method="on_y_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Z" to="." method="on_z_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Empty" to="." method="on_z_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Space" to="." method="on_space_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Delete" to="." method="on_delete_pressed"]
[connection signal="pressed" from="Panel/GridContainer/Submit" to="." method="on_done_pressed"]
